attempt 2 for fix nav on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -177,24 +177,25 @@ header{
 					margin-left:-5px;
 					opacity:0;
 					position:absolute;
-					// top:-1000px;
+					top:-1000px;
 					transition:.3s ease-in-out;
 					visibility:none;
-					// @include mobile{
+					@include mobile{
 						background-color:rgba(97, 152, 142, .8);
 						left:-1000px;
 						top:40px;
-					// }
+					}
 				}
 				li:hover ul.submenu, li:active ul.submenu{
 					display:block;
 					height:auto;
 					opacity:1;
-					top:40px;
+					top:45px;
 					visibility:visible;
-					// @include mobile{
+					@include mobile{
 						left:5px;
-					// }
+						top:40px;
+					}
 				}			
 				li{
 					background-color:rgba(97, 152, 142, .6);
@@ -218,7 +219,6 @@ header{
 						max-height:0;
 						transition:max-height .15s ease-out;
 						visibility:none;
-
 					}
 					&:hover{
 						background-color:rgba(67, 152, 142, .8);
